docs/api/qiskit/0.28/qiskit.providers.ibmq.runtime.RuntimeEncoder.mdx
---
title: RuntimeEncoder (v0.28)
description: API reference for qiskit.providers.ibmq.runtime.RuntimeEncoder in qiskit v0.28
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.runtime.RuntimeEncoder
---

<span id="qiskit-providers-ibmq-runtime-runtimeencoder" />

# qiskit.providers.ibmq.runtime.RuntimeEncoder

<Class id="qiskit.providers.ibmq.runtime.RuntimeEncoder" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.15/qiskit/providers/ibmq/runtime/utils.py" signature="RuntimeEncoder(*, skipkeys=False, ensure_ascii=True, check_circular=True, allow_nan=True, sort_keys=False, indent=None, separators=None, default=None)" modifiers="class">
  JSON Encoder used by runtime service.

  Constructor for JSONEncoder, with sensible defaults.

  If skipkeys is false, then it is a TypeError to attempt encoding of keys that are not str, int, float or None. If skipkeys is True, such items are simply skipped.

  If ensure\_ascii is true, the output is guaranteed to be str objects with all incoming non-ASCII characters escaped. If ensure\_ascii is false, the output can contain non-ASCII characters.

  If check\_circular is true, then lists, dicts, and custom encoded objects will be checked for circular references during encoding to prevent an infinite recursion (which would cause an OverflowError). Otherwise, no such check takes place.

  If allow\_nan is true, then NaN, Infinity, and -Infinity will be encoded as such. This behavior is not JSON specification compliant, but is consistent with most JavaScript based encoders and decoders. Otherwise, it will be a ValueError to encode such floats.

  If sort\_keys is true, then the output of dictionaries will be sorted by key; this is useful for regression tests to ensure that JSON serializations can be compared on a day-to-day basis.

  If indent is a non-negative integer, then JSON array elements and object members will be pretty-printed with that indent level. An indent level of 0 will only insert newlines. None is the most compact representation.

  If specified, separators should be an (item\_separator, key\_separator) tuple. The default is (‘, ‘, ‘: ‘) if *indent* is `None` and (‘,’, ‘: ‘) otherwise. To get the most compact JSON representation, you should specify (‘,’, ‘:’) to eliminate whitespace.

  If specified, default is a function that gets called for objects that can’t otherwise be serialized. It should return a JSON encodable version of the object or raise a `TypeError`.

  ### \_\_init\_\_

  <Function id="qiskit.providers.ibmq.runtime.RuntimeEncoder.__init__" signature="__init__(*, skipkeys=False, ensure_ascii=True, check_circular=True, allow_nan=True, sort_keys=False, indent=None, separators=None, default=None)">
    Constructor for JSONEncoder, with sensible defaults.

    If skipkeys is false, then it is a TypeError to attempt encoding of keys that are not str, int, float or None. If skipkeys is True, such items are simply skipped.

    If ensure\_ascii is true, the output is guaranteed to be str objects with all incoming non-ASCII characters escaped. If ensure\_ascii is false, the output can contain non-ASCII characters.

    If check\_circular is true, then lists, dicts, and custom encoded objects will be checked for circular references during encoding to prevent an infinite recursion (which would cause an OverflowError). Otherwise, no such check takes place.

    If allow\_nan is true, then NaN, Infinity, and -Infinity will be encoded as such. This behavior is not JSON specification compliant, but is consistent with most JavaScript based encoders and decoders. Otherwise, it will be a ValueError to encode such floats.

    If sort\_keys is true, then the output of dictionaries will be sorted by key; this is useful for regression tests to ensure that JSON serializations can be compared on a day-to-day basis.

    If indent is a non-negative integer, then JSON array elements and object members will be pretty-printed with that indent level. An indent level of 0 will only insert newlines. None is the most compact representation.

    If specified, separators should be an (item\_separator, key\_separator) tuple. The default is (‘, ‘, ‘: ‘) if *indent* is `None` and (‘,’, ‘: ‘) otherwise. To get the most compact JSON representation, you should specify (‘,’, ‘:’) to eliminate whitespace.

    If specified, default is a function that gets called for objects that can’t otherwise be serialized. It should return a JSON encodable version of the object or raise a `TypeError`.
  </Function>

  ## Methods

  |                                                                                                                                                                 |                                                                                                                                                    |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.providers.ibmq.runtime.RuntimeEncoder.__init__ "qiskit.providers.ibmq.runtime.RuntimeEncoder.__init__")(\*\[, skipkeys, ensure\_ascii, …]) | Constructor for JSONEncoder, with sensible defaults.                                                                                               |
  | [`default`](#qiskit.providers.ibmq.runtime.RuntimeEncoder.default "qiskit.providers.ibmq.runtime.RuntimeEncoder.default")(obj)                                  | Implement this method in a subclass such that it returns a serializable object for `o`, or calls the base implementation (to raise a `TypeError`). |
  | [`encode`](#qiskit.providers.ibmq.runtime.RuntimeEncoder.encode "qiskit.providers.ibmq.runtime.RuntimeEncoder.encode")(o)                                       | Return a JSON string representation of a Python data structure.                                                                                    |
  | [`iterencode`](#qiskit.providers.ibmq.runtime.RuntimeEncoder.iterencode "qiskit.providers.ibmq.runtime.RuntimeEncoder.iterencode")(o\[, \_one\_shot])           | Encode the given object and yield each string representation as available.                                                                         |

  ## Attributes

  |                  |   |
  | ---------------- | - |
  | `item_separator` |   |
  | `key_separator`  |   |

  ### default

  <Function id="qiskit.providers.ibmq.runtime.RuntimeEncoder.default" signature="default(obj)">
    Implement this method in a subclass such that it returns a serializable object for `o`, or calls the base implementation (to raise a `TypeError`).

    For example, to support arbitrary iterators, you could implement default like this:

    ```python
    def default(self, o):
        try:
            iterable = iter(o)
        except TypeError:
            pass
        else:
            return list(iterable)
        # Let the base class default method raise the TypeError
        return JSONEncoder.default(self, o)
    ```

    **Return type**

    `Any`
  </Function>

  ### encode

  <Function id="qiskit.providers.ibmq.runtime.RuntimeEncoder.encode" signature="encode(o)">
    Return a JSON string representation of a Python data structure.

    ```python
    >>> from json.encoder import JSONEncoder
    >>> JSONEncoder().encode({"foo": ["bar", "baz"]})
    '{"foo": ["bar", "baz"]}'
    ```
  </Function>

  ### iterencode

  <Function id="qiskit.providers.ibmq.runtime.RuntimeEncoder.iterencode" signature="iterencode(o, _one_shot=False)">
    Encode the given object and yield each string representation as available.

    For example:

    ```python
    for chunk in JSONEncoder().iterencode(bigobject):
        mysocket.write(chunk)
    ```
  </Function>
</Class>

